--- a/public/_header.html
+++ b/public/_header.html
@@ -48,7 +48,7 @@
                 </svg>
             </button>
             <!-- デスクトップでサイドバーが展開されているときに表示されるロゴのプレースホルダー -->
-            <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-10 w-auto md:block" id="sidebar-logo">
+            <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-10 w-auto md:hidden" id="sidebar-logo">
         </div>
         <nav class="flex flex-col p-2 space-y-2">
             <a href="index.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100">
