--- a/public/_header.html
+++ b/public/_header.html
@@ -1,13 +1,19 @@
 <header class="p-4 max-w-4xl mx-auto">
     <div class="flex justify-between items-center">
-        <!-- 左側: ハンバーガーメニューボタン (モバイルのみ表示) -->
+        <!-- 左側: ハンバーガーメニューボタン (モバイル用とデスクトップ用) -->
         <div class="w-1/3 flex justify-start relative">
+            <!-- モバイル用ハンバーガーメニュー -->
             <button id="menu-toggle" class="p-2 rounded-full bg-white hover:bg-gray-200 focus:outline-none md:hidden">
                 <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                 </svg>
             </button>
-            <!-- デスクトップ用ハンバーガーメニューは削除 -->
+            <!-- デスクトップ用ハンバーガーメニュー (md以上で表示) -->
+            <button id="desktop-menu-toggle" class="p-2 rounded-full bg-white hover:bg-gray-200 focus:outline-none hidden md:block">
+                <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                </svg>
+            </button>
         </div>
 
         <!-- 中央: ロゴ -->
@@ -41,7 +47,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                 </svg>
             </button>
-            <!-- サイドバー内のロゴ (モバイル展開時に表示) -->
+            <!-- デスクトップでサイドバーが展開されているときに表示されるロゴのプレースホルダー -->
             <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-10 w-auto hidden" id="sidebar-logo">
         </div>
         <nav class="flex flex-col p-2 space-y-2">
@@ -65,7 +71,7 @@
         <div class="mt-auto pt-4 border-t border-gray-200 p-4">
             <button id="logout-button-mobile" class="flex items-center w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-gray-100">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/></svg>
-                <span class="ml-3 menu-text whitespace-nowrap inline-block">ログアウト</span>
+                <span class="ml-3 menu-text hidden">ログアウト</span>
             </button>
         </div>
     </div>
