--- a/public/_header.html
+++ b/public/_header.html
@@ -51,25 +51,25 @@
             <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-10 w-auto hidden" id="sidebar-logo">
         </div>
         <nav class="flex flex-col p-2 space-y-2">
-            <a href="index.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100">
+            <a href="index.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100 group">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
                 <span class="ml-3 menu-text hidden">打刻</span>
             </a>
-            <a href="projects.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100">
+            <a href="projects.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100 group">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"/></svg>
                 <span class="ml-3 menu-text hidden">プロジェクト管理</span>
             </a>
-            <a href="summary.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100">
+            <a href="summary.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100 group">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/></svg>
                 <span class="ml-3 menu-text hidden">稼働管理</span>
             </a>
-            <a href="calendar.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100">
+            <a href="calendar.html" class="flex items-center p-2 rounded-md text-gray-700 hover:bg-gray-100 group">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/></svg>
                 <span class="ml-3 menu-text hidden">カレンダー連携</span>
             </a>
         </nav>
         <div class="mt-auto pt-4 border-t border-gray-200 p-4">
-            <button id="logout-button-mobile" class="flex items-center w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-gray-100">
+            <button id="logout-button-mobile" class="flex items-center w-full text-left px-3 py-2 rounded-md text-base font-medium text-red-600 hover:bg-gray-100 group">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 flex-shrink-0" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"/></svg>
                 <span class="ml-3 menu-text hidden">ログアウト</span>
             </button>
