--- a/public/_header.html
+++ b/public/_header.html
@@ -33,7 +33,7 @@
     <div id="mobile-menu-overlay" class="fixed inset-0 bg-black bg-opacity-50 z-20 hidden"></div>
 
     <!-- サイドバーメニュー (モバイルでは非表示、デスクトップではアイコンのみの幅で表示) -->
-    <div id="sidebar-menu" class="fixed inset-y-0 left-0 w-64 bg-white shadow-lg z-30 transition-transform duration-300 ease-in-out -translate-x-full md:w-16 md:translate-x-0">
+    <div id="sidebar-menu" class="fixed inset-y-0 left-0 bg-white shadow-lg z-30 transition-transform duration-300 ease-in-out -translate-x-full md:w-16 md:translate-x-0">
         <div class="flex justify-between p-4">
             <!-- 閉じるボタン (モバイル用) -->
             <button id="close-menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none md:hidden">
